<?xml version="1.0"?>
<package>
  <name>grouper_lidar</name>
  <version>0.0.0</version>
  <description>The grouper_lidar package</description>
  <maintainer email="pigheadx@gmail.com">Ph.X</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/pigheadx/grouper_lidar</url>
  <author email="pigheadx@gmail.com">Ph.X</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>grouper_lidar_msgs</build_depend>
  <build_depend>dynamixel_control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>grouper_lidar_msgs</run_depend>
  <run_depend>dynamixel_control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <export></export>
</package>
